--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
   "internationalization": "PL/ENG",
   "yes": "Yes",
   "no": "No",
+  "loading": "Loading...",
   "header": {
     "add": "Add",
     "edit": "Edit"
@@ -42,7 +43,10 @@
   },
   "register": {
     "register-header": "Register a bank account",
-    "sign-in": "CREATE AN ACCOUNT"
+    "sign-in": "CREATE AN ACCOUNT",
+    "username": "Username",
+    "email": "Email",
+    "password": "Password"
   },
   "form": {
     "required": "Required field"
