--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,11 @@
     "add": "Add",
     "edit": "Edit"
   },
+  "cancel": {
+    "bank": "Are you sure you want to delete this bank?",
+    "account": "Are you sure you want to delete this account?",
+    "client": "Are you sure you want to delete this client?"
+  },
   "angular-lib": {
     "title": "Angular Spp"
   },
